--- a/css/layout.css
+++ b/css/layout.css
@@ -919,6 +919,7 @@ font-size: 14px;}
 #headerpdf {
 	width: 940px;
 	float: left;
+	margin-bottom: 50px;
 }
 
 .col1 {
@@ -935,23 +936,43 @@ font-size: 14px;}
 }
 
 .coltitulo {
-	width: 400px;
+	width: 50%;
 	float: left;
 	text-align: center;
 	
 }
 
 .col3 {
-	width: 450px;
+	width: 500px;
 	float: left;
 	
 }
 
-.col4 {
-	width: 750px;
+.col30 {
+
+	width: 940px;
 	float: left;
 }
 
+
+.col31 {
+	width: 360px;
+	float: left;
+	margin-left: 80px;
+	
+
+}
+
+.col4 {
+	width: 940px;
+	float: left;
+}
+
+
+/*.col4 img {
+	float: right;
+}
+*/
 .col5 {
 	width: 150px;
 	float: left;
@@ -959,17 +980,28 @@ font-size: 14px;}
 	
 }
 
+.col25 {
+
+	width: 25%;
+	float: left;
+	font-size: 15px;
+
+}
+
 .titulo {
+	width: 100%;
 	color: #000;
-	font-size: 22px;
+	font-size: 26px;
 	margin-top: 30px;
 	float: left;
+	text-align: center;
 }
 
 .mardi {
 	color: #000;
 	font-size: 18px;
 	margin-top: 20px;
+	margin-left: 35px;
 	float: left;
 }
 
@@ -980,15 +1012,29 @@ font-size: 14px;}
 }
 
 
+#bottoms {
+	width: 940px;
+	margin-top: 5px;
+	float: left;
+	font-size: 16px;
+}
 
 .datapdf {
 	font-weight: bold;
 	font-size: 14pt;
+	float: left;
 
 }
 
-.textopdf {	
-	font-size: 12px;
+.colors {
+	font-weight: bold;
+	font-size: 14pt;
+	color: blue;
+	float: left;
+}
+
+.textopdfb {	
+	font-size: 16px;
 	text-align: justify;
 	
 }
@@ -1011,9 +1057,18 @@ font-size: 14px;}
 
 }
 
-.colors {
+.espacio {
+	width: 100%;
+
+	float: left;
+	margin: 30px 30px 35px 30px;
+}
+
+
+
+.colorstour {
 font-weight: bold;
-	font-size: 14pt;
+	font-size: 10pt;
 	color: blue;
 	text-align: right;
 
@@ -1021,8 +1076,47 @@ font-weight: bold;
 }
 
 
-.cincuenta {
+.contenedor {
+
+	width: 100%;
+	float: left;
+
+}
+
+.cols5{
 	width: 50%;
+	float: left;
+
+}
+
+.cuarenta {
+	width: 50%;
+	float: left;
+	margin-bottom: 2px;
+
+}
+
+.sesenta {
+	width: 50%;
+	float: left;
+
+}
+
+.cuarentas {
+	width: 50%;
+	float: left;
+	margin-bottom: 15px;
+
+}
+
+.cincuenta {
+
+	width: 50%;
+	float: left;
+}
+
+.sesentas {
+	width: 70%;
 	float: left;
 
 }
