--- a/css/prints.css
+++ b/css/prints.css
@@ -8,6 +8,7 @@ body {
 
 /* PDF Section Print  */
 
+
 #mainpdf {
 
 	width: 940px;
@@ -18,6 +19,7 @@ body {
 #headerpdf {
 	width: 940px;
 	float: left;
+	margin-bottom: 50px;
 }
 
 .col1 {
@@ -33,34 +35,73 @@ body {
 	
 }
 
+.coltitulo {
+	width: 50%;
+	float: left;
+	text-align: center;
+	
+}
+
 .col3 {
-	width: 450px;
+	width: 500px;
 	float: left;
 	
+}
+
+.col30 {
+
+	width: 940px;
+	float: left;
+}
+
+
+.col31 {
+	width: 360px;
+	float: left;
+	margin-left: 80px;
+	
+
 }
 
 .col4 {
-	width: 750px;
+	width: 940px;
 	float: left;
 }
 
+
+/*.col4 img {
+	float: right;
+}
+*/
 .col5 {
 	width: 150px;
 	float: left;
+
 	
 }
 
+.col25 {
+
+	width: 25%;
+	float: left;
+	font-size: 15px;
+
+}
+
 .titulo {
+	width: 100%;
 	color: #000;
-	font-size: 18px;
+	font-size: 26px;
 	margin-top: 30px;
 	float: left;
+	text-align: center;
 }
 
 .mardi {
 	color: #000;
-	font-size: 12px;
+	font-size: 18px;
 	margin-top: 20px;
+	margin-left: 35px;
 	float: left;
 }
 
@@ -71,19 +112,121 @@ body {
 }
 
 
+#bottoms {
+	width: 940px;
+	margin-top: 5px;
+	float: left;
+	font-size: 16px;
+}
 
 .datapdf {
 	font-weight: bold;
 	font-size: 14pt;
+	float: left;
 
 }
 
-.textopdf {	
+.colors {
+	font-weight: bold;
+	font-size: 14pt;
+	color: blue;
+	float: left;
+}
+
+.textopdfb {	
+	font-size: 16px;
+	text-align: justify;
+	
+}
+
+.textopdfd {	
 	font-size: 12px;
 	text-align: justify;
+	padding: 50px;
 }
 
 .imgright {
 	float: left;
 
+}
+
+.login {
+	width: 500px;
+	padding: 20px;
+	margin: 0 auto 0 auto;
+
+}
+
+.espacio {
+	width: 100%;
+
+	float: left;
+	margin: 30px 30px 35px 30px;
+}
+
+
+
+.colorstour {
+font-weight: bold;
+	font-size: 10pt;
+	color: blue;
+	text-align: right;
+
+
+}
+
+
+.contenedor {
+
+	width: 100%;
+	float: left;
+
+}
+
+.cols5{
+	width: 50%;
+	float: left;
+
+}
+
+.cuarenta {
+	width: 50%;
+	float: left;
+	margin-bottom: 2px;
+
+}
+
+.sesenta {
+	width: 50%;
+	float: left;
+
+}
+
+.cuarentas {
+	width: 50%;
+	float: left;
+	margin-bottom: 15px;
+
+}
+
+.cincuenta {
+
+	width: 50%;
+	float: left;
+}
+
+.sesentas {
+	width: 70%;
+	float: left;
+
+}
+.coltour {
+	width: 450px;
+	float: left;
+}
+
+.coltime {
+	width: 450px;
+	float: left;
+	text-align: right;
 }
