--- a/css/layout.css
+++ b/css/layout.css
@@ -922,6 +922,12 @@ font-size: 14px;}
 	margin-bottom: 50px;
 }
 
+#headerpdfs {
+	width: 940px;
+	float: left;
+	margin-bottom: 10px;
+}
+
 .col1 {
 	width: 270px;
 	min-width: 270px;
