Cambios PDF y mas

--- a/css/layout.css
+++ b/css/layout.css
@@ -1039,6 +1039,22 @@ font-size: 14px;}
 	float: left;
 }
 
+
+.colorsC {
+	font-weight: bold;
+	font-size: 10pt;
+	color: blue;
+	float: left;
+}
+
+.colorsR {
+	font-weight: bold;
+	font-size: 14pt;
+	color: blue;
+	float: left;
+	background-color: yellow;
+}
+
 .textopdfb {	
 	font-size: 16px;
 	text-align: justify;
@@ -1102,6 +1118,29 @@ font-weight: bold;
 
 }
 
+.cuarentaR {
+	width: 50%;
+	float: right;
+	margin-bottom: 2px;
+
+
+}
+
+.aja {
+	width: 200px;
+	float: left;
+	text-align: left;
+
+}
+
+.ajas {
+	word-wrap: break-word; 
+   max-width:730px; 
+   width: 730px;
+   float: left;
+
+}
+
 .sesenta {
 	width: 50%;
 	float: left;
@@ -1135,4 +1174,12 @@ font-weight: bold;
 	width: 450px;
 	float: left;
 	text-align: right;
+}
+
+
+.informacion {
+	float: left;
+	margin-top: -20px;
+	width: 100%;
+
 }
