--- a/css/prints.css
+++ b/css/prints.css
@@ -153,7 +153,7 @@ body {
 	font-size: 14pt;
 	color: blue;
 	float: left;
-	background-color: yellow;
+	background-color: yellow !important;;
 }
 
 .textopdfb {	
@@ -280,7 +280,7 @@ font-weight: bold;
 
 .informacion {
 	float: left;
-	margin-top: -23px;
+	margin-top: -20px;
 	width: 100%;
 
 }
